aks_istio_openai/azsearchopenai/azsearchopenai.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azseachopenai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azseachopenai
  template:
    metadata:
      labels:
        app: azseachopenai
        azure.workload.identity/use: "true"
    spec:
      serviceAccountName: workload-identity-aoai-account
      nodeSelector:
        "kubernetes.io/os": linux
      containers:
        - name: azseachopenai
          image: cmendibl3/azseachopenai
          imagePullPolicy: Always
          ports:
            - containerPort: 50505
---
apiVersion: v1
kind: Service
metadata:
  name: azseachopenai
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: 50505
  selector:
    app: azseachopenai

---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: azseachopenai
spec:
  selector:
    istio: aks-istio-ingressgateway-external
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      hosts:
        - "*"
      tls:
        mode: SIMPLE
        
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: azseachopenai
spec:
  hosts:
    - "*"
  gateways:
    - azseachopenai
  http:
    - route:
        - destination:
            host: azseachopenai
            port:
              number: 80
